Change navbar class and link build css

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="../build.css" rel="stylesheet">
 </head>
 
 <body class="bg-gradient-to-r from-cyan-50 to-blue-100">
@@ -31,12 +31,12 @@
 
                 <!-- links -->
                 <ul id="menu" class="md:flex gap-3 hidden md:ml-0 ml-4">
-                    <li class="nav-item"><a href="javascript:void()">Pricing</a></li>
-                    <li class="nav-item"><a href="javascript:void()">Pataner</a></li>
-                    <li class="nav-item"><a href="javascript:void()">Investors</a></li>
-                    <li class="nav-item"><a href="javascript:void()">About</a></li>
-                    <li class="nav-item"><a href="javascript:void()">Contact</a></li>
-                    <li class="nav-item">
+                    <li class="text-lg font-bold my-2 md:my-3 after:content-['']  after:block after:w-0 after:m-auto after:h-[2px] after:ease-in-out after:duration-[1s] after:bg-black hover:after:w-full hover:text-blue-400 md:p-2 duration-100"><a href="javascript:void()">Pricing</a></li>
+                    <li class="text-lg font-bold my-2 md:my-3 after:content-['']  after:block after:w-0 after:m-auto after:h-[2px] after:ease-in-out after:duration-[1s] after:bg-black hover:after:w-full hover:text-blue-400 md:p-2 duration-100"><a href="javascript:void()">Pataner</a></li>
+                    <li class="text-lg font-bold my-2 md:my-3 after:content-['']  after:block after:w-0 after:m-auto after:h-[2px] after:ease-in-out after:duration-[1s] after:bg-black hover:after:w-full hover:text-blue-400 md:p-2 duration-100"><a href="javascript:void()">Investors</a></li>
+                    <li class="text-lg font-bold my-2 md:my-3 after:content-['']  after:block after:w-0 after:m-auto after:h-[2px] after:ease-in-out after:duration-[1s] after:bg-black hover:after:w-full hover:text-blue-400 md:p-2 duration-100"><a href="javascript:void()">About</a></li>
+                    <li class="text-lg font-bold my-2 md:my-3 after:content-['']  after:block after:w-0 after:m-auto after:h-[2px] after:ease-in-out after:duration-[1s] after:bg-black hover:after:w-full hover:text-blue-400 md:p-2 duration-100"><a href="javascript:void()">Contact</a></li>
+                    <li class="text-lg font-bold my-2 md:my-3 after:content-['']  after:block after:w-0 after:m-auto after:h-[2px] after:ease-in-out after:duration-[1s] after:bg-black hover:after:w-full hover:text-blue-400 md:p-2 duration-100">
                         <div class="relative">
                             <input class="p-1 rounded-md relative -top-1 font-normal"  placeholder="Search"/>
                         </div>
@@ -188,26 +188,26 @@
         <section class="bg-gradient-to-tr from-cyan-50 to-blue-100 p-4 md:p-10 mb-5">
             <h3 class="text-center text-2xl md:text-5xl font-bold mt-5">Our Partaners</h3>
             <div class="flex flex-col md:flex-row gap-4 items-center justify-center my-4 md:my-14">
-                <div class="partaner-container">
-                    <div class="partaner-card">
+                <div class="mt-5 hover:scale-105 duration-100 shadow-lg md:w-[20%] w-full h-[130px] mx-auto bg-gradient-to-tr  p-10 border-t-4 border-t-yellow-200 border-l-4 border-l-purple-200 rounded-lg relative">
+                    <div class="bg-slate-200 px-4 py-1 absolute left-0 top-0 rounded-r-lg text-gray-800 font-bold text-sm">
                         <h1>Core Partaner</h1>
                     </div>
                     <img class="h-[60px]" src="imgs/pataners/amazon.png" />
                 </div>
-                <div class="partaner-container">
-                    <div class="partaner-card">
+                <div class="mt-5 hover:scale-105 duration-100 shadow-lg md:w-[20%] w-full h-[130px] mx-auto bg-gradient-to-tr  p-10 border-t-4 border-t-yellow-200 border-l-4 border-l-purple-200 rounded-lg relative">
+                    <div class="bg-slate-200 px-4 py-1 absolute left-0 top-0 rounded-r-lg text-gray-800 font-bold text-sm">
                         <h1>Core Partaner</h1>
                     </div>
                     <img class="h-[20px] mt-3 ml-4" src="imgs/pataners/ubereats.png" />
                 </div>
-                <div class="partaner-container">
-                    <div class="partaner-card">
+                <div class="mt-5 hover:scale-105 duration-100 shadow-lg md:w-[20%] w-full h-[130px] mx-auto bg-gradient-to-tr  p-10 border-t-4 border-t-yellow-200 border-l-4 border-l-purple-200 rounded-lg relative">
+                    <div class="bg-slate-200 px-4 py-1 absolute left-0 top-0 rounded-r-lg text-gray-800 font-bold text-sm">
                         <h1>Core Partaner</h1>
                     </div>
                     <img class="h-[40px] ml-10" src="imgs/pataners/fedex.png" />
                 </div>
-                <div class="partaner-container">
-                    <div class="partaner-card">
+                <div class="mt-5 hover:scale-105 duration-100 shadow-lg md:w-[20%] w-full h-[130px] mx-auto bg-gradient-to-tr  p-10 border-t-4 border-t-yellow-200 border-l-4 border-l-purple-200 rounded-lg relative">
+                    <div class="bg-slate-200 px-4 py-1 absolute left-0 top-0 rounded-r-lg text-gray-800 font-bold text-sm">
                         <h1>Core Partaner</h1>
                     </div>
                     <img class="h-[70px] ml-[33px]" src="imgs/pataners/doordash.png" />
